# ParrotKey

./: .gitignore  CHANGELOG.md  README.ja.md  README.ko.md  README.md  README.yue.md  README.zh-CN.md  README.zh-TW.md  pyproject.toml  requirements.txt
examples/: parrotkey.service
src/parrotkey/: __init__.py  __main__.py  cli.py  config.py
src/parrotkey/asr/: qwen_pt.py
src/parrotkey/hotkey/: __init__.py
src/parrotkey/inject/: __init__.py  clipboard.py
src/parrotkey/pipeline/: __init__.py  push_to_talk.py
